<resources>

    <string name="app_name">Notes</string>
    <string name="banner_ad_app" translatable="false">ca-app-pub-2209532931509792/1729016626</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="newPoint">Add section</string>
    <string name="bucket">Deleted</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="delete_forever_massage">All selected notes in Recycle Bin will be permanently deleted.</string>
    <string name="question_delete_section">Delete the section?</string>
    <string name="delete_section_massage">If the section contains notes, they will go to the Recycle Bin.</string>
    <string name="archive">Archive</string>
    <string name="notifications">Reminders</string>
    <string name="add_section">Add a section</string>
    <string name="unarchive">Unarchive</string>
    <string name="act_archive">Archive</string>
    <string name="act_delete">Delete</string>
    <string name="act_ask">Ask</string>
    <string name="at_once">At once</string>
    <string name="one_day">1 day</string>
    <string name="tree_day">3 days</string>
    <string name="seven_day">7 days</string>
    <string name="month">Month</string>
    <string name="all">All</string>
    <string name="notification">Reminder</string>
    <string name="question_delete_notification">Delete the reminder?</string>
    <string name="ok">OK</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="act_open">Open</string>


    <string name="question_clear_trash">Empty Recycle Bin?</string>
    <string name="question_clear_trash_additional">All notes in Recycle Bin will be permanently deleted.</string>
    <string name="fonts">Fonts</string>
    <string name="task_font_size">Font size of note</string>
    <string name="font_size_card">Font size of the card</string>
    <string name="other">Other</string>
    <string name="deletion_from_bucket_period">Delete note from Recycle Bin</string>
    <string name="action_with_swap">Action with swipe</string>
    <string name="set_section_location">Set section location</string>
    <string name="section_position">Section position</string>
    <string name="edit">Edit</string>
    <string name="hide">Hide</string>
    <string name="leave">Leave</string>
    <string name="main_section">Main section</string>

    <string name="notify">Remind</string>
    <string name="delete_notification">Remove reminder</string>
    <string name="delete_checked">Remove checked</string>
    <string name="set_color">Set color</string>
    <string name="choose_color">Select the color</string>
    <string name="clear_basket">Empty Recycle Bin</string>
    <string name="act_remember">Remember</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="new_point">List item</string>
    <string name="without_color">Without color</string>

    <string name="other_time">Another time</string>
    <string name="every_month">Every month</string>
    <string name="never">Never</string>
    <string name="choose_date">Select date</string>

    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>

    <string name="no_sections">No sections available</string>
    <string name="reminder_past_time">The reminder is set in the past tense. Post to notifications?</string>
    <string name="section_location">Section location</string>
    <string name="empty">Empty</string>

    <string name="section_already_exist">A section with this name already exists</string>
    <string name="copy_restored">Copy restored!</string>
    <string name="file_error">File error!</string>
    <string name="copy_saved_as">Copy saved as </string>
    <string name="notes_added_to_main_section">Notes added to main section </string>
    <string name="notes_added_to_bucket">Notes added to Trash </string>
    <string name="notes_archived">Notes are archived </string>
    <string name="notes_added_to">Оценить</string>
    <string name="enter_file_name">Enter the file name!</string>
    <string name="backup">Backup</string>
    <string name="export">Export</string>
    <string name="import_">Import</string>
    <string name="insert_SD">Insert an SD card!</string>
    <string name="delete_section">Delete section</string>

    <string name="rate_dialog_title">Rate this App</string>
    <string name="rate_dialog_message">Please rate the application, it will take no more than a minute! Your assessment is very important for us.</string>
    <string name="rate">Rate</string>
    <string name="welcome">Welcome!</string>
    <string name="write_notes">Write notes and everything will be fine.</string>

</resources>