<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_newer"
        android:showAsAction="ifRoom|withText"
        android:title="@string/never"
        android:visible="true"/>
    <item
        android:id="@+id/item_every_day"
        android:showAsAction="ifRoom|withText"
        android:title="@string/every_day"
        android:textStyle="bold"
        android:visible="true"
        />
    <item
        android:id="@+id/item_every_week"
        android:showAsAction="ifRoom|withText"
        android:title="@string/every_week"
        android:visible="true"/>
    <item
        android:id="@+id/item_every_month"
        android:showAsAction="ifRoom|withText"
        android:title="@string/every_month"
        android:visible="true"/>
</menu>