<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_weight="1"
            android:textSize="16dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            android:paddingRight="10dp"
            android:id="@+id/spinnerButtonDate"
            style="?android:attr/spinnerStyle"
            android:layout_weight="1"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/time" />

        <Button
            android:layout_weight="1"
            android:paddingLeft="10dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerButtonTime"
            style="?android:attr/spinnerStyle"
            android:textSize="16dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/repeat" />

        <Button
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerButtonRepeat"
            style="?android:attr/spinnerStyle"
            android:textSize="16dp"/>


    </LinearLayout>






</LinearLayout>