<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingTop="2dp"

    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_marginTop="5dp"
                android:paddingRight="16dp"
                android:text="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:alpha="0.67"
                android:id="@+id/headTextView"
                android:textSize="17sp"
                android:textStyle="normal|bold"/>



            <TextView
                android:paddingRight="16dp"
                android:paddingTop="4dp"
                android:text="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:alpha="0.67"
                android:id="@+id/contextTextView"
                android:textSize="17sp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:measureWithLargestChild="true"
        android:layout_gravity="end"
        >

        <Button style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/dialogBtnEdit"
            android:onClick="edit"
            android:text="@string/edit"
            android:layout_marginRight="2dp"/>


        <Button style="?android:attr/buttonBarButtonStyle"
            android:text="@string/hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/dialogBtnOK"
            android:onClick="ok"
            />
        <Button style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/dialogBtnLeave"
            android:onClick="leave"
            android:text="@string/leave"
            android:layout_marginRight="2dp"/>


    </LinearLayout>
</LinearLayout>